css/cover.css
/*
 * Globals
 */
 a,
 a:focus,
 a:hover {
   color: #fff;
 }
 
 body {
   height: 100vh;
   background-color: rgb(17, 17, 17);
   font-family: 'Itim', cursive;
   font-size: large;
   /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); */
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 /* 
  * Header 
  */
 .navbar {
   height: auto;
   width: 100%;
   padding-top: 2rem;
   display: block;
 }
 
 .navbar-nav1 {
   flex-direction: row;
 }
 
 /*  
  * Feed
  */
 .feed {
   margin: 5%;
 }
 
 .feedlink {
   padding-top: 2rem;
 }
 
 /* Start contact */
 .contact {
   color: #fff;
   font-size: small;
 }
 
 .section-heading {
   text-align: center;
   padding-bottom: 2rem;
 }
 
 form {
   width: 70%;
   margin: 0 auto 50px;
 }
 
 form label {
   font-size: large;
 }
 
 input,
 select,
 textarea {
   width: 100%;
   padding: 1rem;
   margin-bottom: 10px;
   border: none;
   outline-color: rgb(195, 195, 195);
 }
 
 input[type="submit"] {
   width: 30%;
   font-weight: 400;
   font-size: larger;
   float: right;
   background-color: rgb(195, 195, 195);
   color: #111;
   padding: 1rem 2rem;
   cursor: pointer;
   transition: background-color 650ms;
 }
 
 input[type="submit"]:hover {
   background-color: rgb(236, 236, 236);
 }
 /* End contact */
 
 /* 
  * Media Queries 
  */
 
 /* @media screen and (max-width:960px){} */
 /* @media screen and (max-width:720px){} */
 
 @media screen and (max-width:540px) {
 
   header a {
     padding: 2rem;
   }
 
   .navbtn {
     padding-top: 3rem;
   }
 
   div#about { order: 2; }
   div#contact { order: 3; }
   div#logo { order: 1; }
 
   .feedlink {
     padding: 3rem 0;
   }
 
   form {
     width: 90%;
   }
 
   input[type="submit"] {
     width: 100%;
     padding: 1rem;
     margin: 2rem 0;
   }
 }
 
 /* 
  * New gallery styles
  */
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 10px;
   max-width: 1000px;
   margin: 0 auto;
 }
 
 .gallery img {
   width: 100%;
   height: auto;
   object-fit: cover;
   border: 2px solid #fff; /* Optional;
 }
 
/*
 * Pagination Controls
 */
 .pagination-controls {
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 2rem;
}

.pagination-controls button {
  cursor: pointer;
  background-color: #ccc;
  border: none;
  padding: 0.5rem 1.5rem;
  margin: 0 1rem;
  color: #111;
  transition: background-color 300ms;
  border-radius: 20px; /* Rounded corners */
  width: 120px;        /* Fixed width for both buttons */
  text-align: center;
}

.pagination-controls button:hover {
  background-color: #eee;
}

.pagination-controls button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

